--- a/yatube/templates/includes/footer.html
+++ b/yatube/templates/includes/footer.html
@@ -2,4 +2,4 @@
 {% load static %}
 
 
-  <p>© {{ year }} Copyright <span style="color:red">Ya</span>tube</p>    
+  <p>© {% now 'Y' %} Copyright <span style="color:red">Ya</span>tube</p>    
