--- a/yatube/templates/base.html
+++ b/yatube/templates/base.html
@@ -15,6 +15,7 @@
     <meta name="theme-color" content="#ffffff">
     <!-- Подключен файл со стандартными стилями бустрап -->
     <link rel="stylesheet" href="http://127.0.0.1:8000/static/css/bootstrap.min.css">
+    <title>{% block title %}Последние обновления на сайте{% endblock %}</title>
   </head>
   <body>       
     <header>
