--- a/yatube/templates/posts/index.html
+++ b/yatube/templates/posts/index.html
@@ -1,23 +1,23 @@
 <!-- templates/posts/index.html -->
 {% extends 'base.html' %}
 
+{% block title %}
+  Последние обновления на сайте
+{% endblock %}
 
 {% block content %}
-  <head>
-    <title> Последние обновления на сайте </title>
-  </head>    
-    <h1>Последние обновления на сайте</h1>   
-  {% for post in page_obj %}
-    <ul>
-      <li>
-        Автор: {{ post.author.get_full_name }}
-      </li>
-      <li>
-        Дата публикации: {{ post.pub_date|date:"d E Y" }}
-      </li>
-    </ul>
-      <p>{{ post.text|linebreaksbr }}</p>    
-  {% if post.group.slug == None %}
+  <h1>Последние обновления на сайте</h1>   
+{% for post in page_obj %}
+  <ul>
+    <li>
+      Автор: {{ post.author.get_full_name }}
+    </li>
+    <li>
+      Дата публикации: {{ post.pub_date|date:"d E Y" }}
+    </li>
+  </ul>
+    <p>{{ post.text|linebreaksbr }}</p>    
+  {% if post.group.slug is None %}
     Данный пост не принадлежит ни к одной из групп сайта.
   {% else %}
     <a href="{% url 'posts:group_list' post.group.slug %}">все записи группы</a>
